--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -7,23 +7,63 @@
     <title>User Dashboard</title>
 </head>
 <body>
-    <header><h2>Dashboard</h2></header>
+<section class="base">
+  <div class="col-md-6">
+    <h2>Login</h2>
 
-    <div>
-        <h3>My Workouts</h3>
-        <div class ='wrkts'></div>
-    </div>
+    <form class="login">
+      <div class="login-">
+        <label for="email-login">email:</label>
+        <input class="form-input" type="text" id="email-login" />
+      </div>
+      <div class="form-group">
+        <label for="password-login">password:</label>
+        <input class="form-input" type="password" id="password-login" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">login</button>
+      </div>
+    </form>
+  </div>
+  <div class="col-md-6">
+    <h2>Sign up</h2>
 
-    <div>
-        <h3>My Posts</h3>
-        <div>{{post}}</div>
-    </div>
+    <form class="signup">
+      <div class="form-group">
+        <label for="name-signup">name:</label>
+        <input class="form-input" type="text" id="name-signup" />
+      </div>
+      <div class="form-group">
+        <label for="email-signup">email:</label>
+        <input class="form-input" type="text" id="email-signup" />
+      </div>
+      <div class="form-group">
+        <label for="password-signup">password:</label>
+        <input class="form-input" type="password" id="password-signup" />
+      </div>
 
-    {{!-- <div>
-        <h3>Saved Workouts</h3>
-        <div></div>
-    </div> --}}
-    
-    
+      <div class="form-group">
+        
+        <label for="wrkt-diff">What is your preferred level of difficulty?</label>
+        
+        <div class="dropdown">
+      
+            <button class="dwnbtn">Select a difficulty.</button>
+            <div class="drpdwn-content">
+                <a href="#">{{difficulty}}</a>
+            </div>
+
+        </div>
+      </div>
+      <div>
+
+      </div>
+
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">signup</button>
+      </div>
+    </form>
+  </div>
+</div>
 </body>
 </html>
